--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@react-three/drei": "^3.11.2",
         "@react-three/postprocessing": "1.4.1",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -10,6 +11,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "react-three-fiber": "^5.3.21",
+        "three": "^0.126.1",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
