--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
         "react-three-fiber": "^5.3.21",
+        "react-three-gui": "^0.4.2",
         "three": "^0.126.1",
         "web-vitals": "^1.0.1"
     },
